--- a/index.html
+++ b/index.html
@@ -13,3 +13,21 @@ HINT for TODO 6: You can use the height attribute set to 200 to make the image s
 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 
 <!-- TODO 7: Add the Contact Me and About Me page links -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+ <h1> Le PortFolio de Herman</h1>
+ <h2>Je suis un apprenti developeur Web </h2><hr>
+<a href=".public/movie-ranking.html"> Mes films preferés</a><br/>
+<img src="./assets/images/mes films.png" height="200px" width="200px"><br/>
+<a href="./public/birthday-invite.html"> Mon anniversaire</a><br/>
+<img src="./assets/images/mon anniv.png" height="200px" width="200px"><br/>
+<a href="./public/contact.html"> Contactez Moi</a><br/>
+<a href="./public/about.html"> A Propos de Moi</a>
+</body>
+</html>
